testData/inspections/antoraModuleResolve/modules/ROOT/pages/moduleDoesNotResolve.adoc
= Page with modules that don't resolve

xref:<error descr="Antora Module doesn't resolve">nocomponent:nomodule</error>:page.adoc[]

image::<error descr="Antora Module doesn't resolve">nocomponent:nomodule</error>:image.png[]

